[project]
	name = "ioctl-opt"
	version = "1.3"
	description = "Functions to compute fnctl.ioctl's opt argument"
	readme = "README.rst"
	authors = [{name = "Vincent Pelletier", email = "plr.vincent@gmail.com"}]
	license = { text = "GPL-2.0-or-later" }
	keywords = ["ioctl"]
	requires-python = ">=3.10"
	classifiers = [
		"Intended Audience :: Information Technology",
		"License :: OSI Approved :: GNU General Public License (GPL)",
		"Operating System :: POSIX :: Linux",
		"Programming Language :: Python :: 3",
		"Typing :: Typed",
	]
	dynamic = ["dependencies"]

[project.urls]
	Homepage = "https://github.com/vpelletier/python-ioctl-opt"
	Issues = "https://github.com/vpelletier/python-ioctl-opt/issues"
